Changed logo size so it no longer gets way too big on fullscreen

--- a/css/default.css
+++ b/css/default.css
@@ -61,7 +61,7 @@ nav a {
 }
 
 #logo {
-	width: 20vw;
+	width: 200px;
 }
 
 main {
